src/objects/caIntegrator_Data__c.object
<CustomObject>
    <fields>
        <fullName>Adj_AromataseInhib__c</fullName>
        <label>Adj_AromataseInhib</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Adj_ChemoReg__c</fullName>
        <label>Adj_ChemoReg</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Adj_Chemo__c</fullName>
        <label>Adj_Chemo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Adj_Other__c</fullName>
        <label>Adj_Other</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Adj_OvarianAbl__c</fullName>
        <label>Adj_OvarianAbl</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Adj_OvarianSup__c</fullName>
        <label>Adj_OvarianSup</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Adj_Tam__c</fullName>
        <label>Adj_Tam</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Adj_Trastuzumab__c</fullName>
        <label>Adj_Trastuzumab</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Adu_OtherReg__c</fullName>
        <label>Adu_OtherReg</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BaseDiseaseExt__c</fullName>
        <label>BaseDiseaseExt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BaseNodeExt__c</fullName>
        <label>BaseNodeExt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BilateralCa__c</fullName>
        <label>BilateralCa</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BirthCountry__c</fullName>
        <label>BirthCountry</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Breast_Conserv__c</fullName>
        <label>Breast Conserv</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChemoCat__c</fullName>
        <label>ChemoCat</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChemoGrowthMeds__c</fullName>
        <label>ChemoGrowthMeds</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_Tx__c</fullName>
        <label>Completed Tx</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DCISGrade_PS__c</fullName>
        <label>DCISGrade_PS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DCISHistology_PS__c</fullName>
        <label>DCISHistology_PS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DCIS_PS__c</fullName>
        <label>DCIS%_PS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DCISspan_PS__c</fullName>
        <label>DCISspan_PS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DermInvolve_PS__c</fullName>
        <label>DermInvolve_PS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DistProgSite__c</fullName>
        <label>DistProgSite</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DistProgTimeD__c</fullName>
        <label>DistProgTimeD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DistProgress__c</fullName>
        <label>DistProgress</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ECOG__c</fullName>
        <label>ECOG</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ERstatus_OS__c</fullName>
        <label>ERstatus_OS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ERstatus_PS__c</fullName>
        <label>ERstatus_PS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ethn__c</fullName>
        <label>Ethn</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExtractDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>ExtractDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GrossPathSize1_PS__c</fullName>
        <label>GrossPathSize1_PS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GrossPathSize2_PS__c</fullName>
        <label>GrossPathSize2_PS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Height__c</fullName>
        <label>Height</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Her2FISHstatus_OS__c</fullName>
        <label>Her2FISHstatus_OS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Her2FISHtest_OS__c</fullName>
        <label>Her2FISHtest_OS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Her2IHCstatus_OS__c</fullName>
        <label>Her2IHCstatus_OS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Her2IHCtest_OS__c</fullName>
        <label>Her2IHCtest_OS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Her2TargetPrint_OS__c</fullName>
        <label>Her2TargetPrint_OS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Her2status_PS__c</fullName>
        <label>Her2status_PS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ISPY2ID__c</fullName>
        <label>ISPY2ID</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>InSitu_OS__c</fullName>
        <label>InSitu_OS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InSitu_PS__c</fullName>
        <label>InSitu_PS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InflamCa_OS__c</fullName>
        <label>InflamCa_OS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Institution__c</fullName>
        <label>Institution</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InterDiseaseExt__c</fullName>
        <label>InterDiseaseExt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InterNodeExt__c</fullName>
        <label>InterNodeExt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interval_Cancer__c</fullName>
        <label>Interval_Cancer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InvHistology_OS__c</fullName>
        <label>InvHistology_OS</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvHistology_PS__c</fullName>
        <label>InvHistology_PS</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvMargin_PS__c</fullName>
        <label>InvMargin_PS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InvMultifocal_PS__c</fullName>
        <label>InvMultifocal_PS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InvPathSize1_PS__c</fullName>
        <label>InvPathSize1_PS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InvPathSize2_PS__c</fullName>
        <label>InvPathSize2_PS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InvSBR_OS__c</fullName>
        <label>InvSBR_OS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InvSBR_PS__c</fullName>
        <label>InvSBR_PS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inv_PS__c</fullName>
        <label>Inv%_PS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LCISHistology_PS__c</fullName>
        <label>LCISHistology_PS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LCIS_PS__c</fullName>
        <label>LCIS%_PS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LCISspan_PS__c</fullName>
        <label>LCISspan_PS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LNdissection_PS__c</fullName>
        <label>LNdissection_PS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LNresult_OS__c</fullName>
        <label>LNresult_OS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LNsampled_OS__c</fullName>
        <label>LNsampled_OS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVI_PS__c</fullName>
        <label>LVI_PS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Laterality__c</fullName>
        <label>Laterality</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LocalProgSite__c</fullName>
        <label>LocalProgSite</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LocalProgTimeD__c</fullName>
        <label>LocalProgTimeD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LocalProgress__c</fullName>
        <label>LocalProgress</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MP_Cat__c</fullName>
        <label>MP_Cat</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MP_Index__c</fullName>
        <label>MP_Index</label>
        <precision>18</precision>
        <scale>17</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MP_Risk__c</fullName>
        <label>MP_Risk</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRILD_T0__c</fullName>
        <label>MRILD_T0</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRILD_T1__c</fullName>
        <label>MRILD_T1</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRILD_T2__c</fullName>
        <label>MRILD_T2</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRIvol_T0_T1__c</fullName>
        <label>MRIvol_T0-T1</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRIvol_T0_T2__c</fullName>
        <label>MRIvol_T0-T2</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRIvol_T0_T3__c</fullName>
        <label>MRIvol_T0-T3</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRIvol_T0__c</fullName>
        <label>MRIvol_T0</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRIvol_T1__c</fullName>
        <label>MRIvol_T1</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRIvol_T2__c</fullName>
        <label>MRIvol_T2</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Menopausal_OS__c</fullName>
        <label>Menopausal_OS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_Detect__c</fullName>
        <label>Method_Detect</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NewPrimeCa__c</fullName>
        <label>NewPrimeCa</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NewPrimeTimeD__c</fullName>
        <label>NewPrimeTimeD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NewPrimeTx__c</fullName>
        <label>NewPrimeTx</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NonStudyChemo__c</fullName>
        <label>NonStudyChemo</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NumExLN_PS__c</fullName>
        <label>NumExLN_PS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumPosLN_PS__c</fullName>
        <label>NumPosLN_PS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRstatus_OS__c</fullName>
        <label>PRstatus_OS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRstatus_PS__c</fullName>
        <label>PRstatus_PS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PathologyStage_PS__c</fullName>
        <label>PathologyStage_PS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PresDiseaseExt__c</fullName>
        <label>PresDiseaseExt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PresNodeExt__c</fullName>
        <label>PresNodeExt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCB_class__c</fullName>
        <label>RCB_class</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCB_index__c</fullName>
        <label>RCB_index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RFS__c</fullName>
        <label>RFS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RFS_ind__c</fullName>
        <label>RFS_ind</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Race__c</fullName>
        <label>Race</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Randomized__c</fullName>
        <label>Randomized</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RtSite__c</fullName>
        <label>RtSite</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RtTherapy__c</fullName>
        <label>RtTherapy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SizeMetLN_PS__c</fullName>
        <label>SizeMetLN_PS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StudyChemo__c</fullName>
        <label>StudyChemo</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Surgery_Br__c</fullName>
        <label>Surgery_Br</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SurvDateD__c</fullName>
        <label>SurvDateD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SurvStat__c</fullName>
        <label>SurvStat</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cNstage_OS__c</fullName>
        <label>cNstage_OS</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cStaging_OS__c</fullName>
        <label>cStaging_OS</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cTstage_OS__c</fullName>
        <label>cTstage_OS</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pCR__c</fullName>
        <label>pCR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ypM__c</fullName>
        <label>ypM</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ypN__c</fullName>
        <label>ypN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ypT__c</fullName>
        <label>ypT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>caIntegrator Data</label>
    <nameField>
        <label>caIntegrator Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>caIntegrator Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>